--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,39 @@
+/* * {
+    outline: 1px solid red;
+} */
+
+body {
+    background-color: rgba(205, 214, 219, 0.3);;
+}
+
 .container {
     width: 1200px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 15px;
 }
 
-/* img {
+img {
+    width: 100%;
     display: block;
-    max-width: 100%;
-    height: auto;
-} */
+}
+
+.slick-prev:before,
+.slick-next:before {
+    color:black;
+    font-size: 30px;
+}
+
+.container.slider-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slick-track {
+    display: flex;
+    gap: 20px;
+}
+
+.slick-prev {
+    left: -35px;
+}
